configs: stm32mp13: Do not display U-Boot logo
By default U-Boot logo is displayed before the STMicroelectronics
splashscreen.
To avoid this, disable CONFIG_VIDEO_LOGO.

Signed-off-by: Patrice Chotard <patrice.chotard@foss.st.com>
Change-Id: I411488912580aa8d7b5a425dd5256a66d0c7b149
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/372859
ACI: CIBUILD <MDG-smet-aci-builds@list.st.com>
ACI: CITOOLS <MDG-smet-aci-reviews@list.st.com>

--- a/configs/stm32mp13_defconfig
+++ b/configs/stm32mp13_defconfig
@@ -143,10 +143,12 @@ CONFIG_USB_GADGET_VENDOR_NUM=0x0483
 CONFIG_USB_GADGET_PRODUCT_NUM=0x5720
 CONFIG_USB_GADGET_DWC2_OTG=y
 CONFIG_DM_VIDEO=y
+# CONFIG_VIDEO_LOGO is not set
 CONFIG_BACKLIGHT_GPIO=y
 CONFIG_VIDEO_STM32=y
 CONFIG_VIDEO_STM32_MAX_XRES=480
 CONFIG_VIDEO_STM32_MAX_YRES=272
+CONFIG_VIDEO_BMP_RLE8=y
 CONFIG_BMP_16BPP=y
 CONFIG_BMP_24BPP=y
 CONFIG_BMP_32BPP=y
