configs: stm32mp25: Do not display U-Boot logo
By default U-Boot logo is displayed before the STMicroelectronics
splashscreen.
To avoid this, disable CONFIG_VIDEO_LOGO.

Signed-off-by: Patrice Chotard <patrice.chotard@foss.st.com>
Change-Id: Ideb7fcbbb8ac919ca4a880722e6a2a3c38545e3e
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/372860
ACI: CIBUILD <MDG-smet-aci-builds@list.st.com>
ACI: CITOOLS <MDG-smet-aci-reviews@list.st.com>

--- a/configs/stm32mp25_defconfig
+++ b/configs/stm32mp25_defconfig
@@ -155,6 +155,7 @@ CONFIG_USB_GADGET_MANUFACTURER="STMicroelectronics"
 CONFIG_USB_GADGET_VENDOR_NUM=0x0483
 CONFIG_USB_GADGET_PRODUCT_NUM=0x5720
 CONFIG_DM_VIDEO=y
+# CONFIG_VIDEO_LOGO is not set
 CONFIG_BACKLIGHT_GPIO=y
 CONFIG_VIDEO_LCD_ORISETECH_OTM8009A=y
 CONFIG_VIDEO_LCD_RAYDIUM_RM68200=y
@@ -164,6 +165,7 @@ CONFIG_VIDEO_STM32_DSI=y
 CONFIG_VIDEO_STM32_LVDS=y
 CONFIG_VIDEO_STM32_MAX_XRES=1920
 CONFIG_VIDEO_STM32_MAX_YRES=1200
+CONFIG_VIDEO_BMP_RLE8=y
 CONFIG_BMP_16BPP=y
 CONFIG_BMP_24BPP=y
 CONFIG_BMP_32BPP=y
