--- a/arch/arm/dts/stm32mp257f-dk.dts
+++ b/arch/arm/dts/stm32mp257f-dk.dts
@@ -240,7 +240,7 @@
 };
 
 &dsi {
-	vdd-dsi-supply =  <&scmi_vddcore>;
+	vdd-supply =  <&scmi_vddcore>;
 	vdda18-supply = <&scmi_v1v8>;
 	status = "okay";
 
