configs: stm32mp1: Enable OF_BOARD_FIXUP flag for stm32mp15_basic_defconfig
Enable OF_BOARD_FIXUP for stm32mp15_basic_defconfig.

Signed-off-by: Patrice Chotard <patrice.chotard@foss.st.com>
Change-Id: I608c39a436e906480e23ac2bfcb049eef48bbf0e
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/382104
ACI: CITOOLS <MDG-smet-aci-reviews@list.st.com>
ACI: CIBUILD <MDG-smet-aci-builds@list.st.com>

--- a/configs/stm32mp15_basic_defconfig
+++ b/configs/stm32mp15_basic_defconfig
@@ -18,6 +18,7 @@ CONFIG_SPL_SPI=y
 # CONFIG_ARMV7_VIRT is not set
 CONFIG_SYS_LOAD_ADDR=0xc2000000
 CONFIG_FWU_NUM_IMAGES_PER_BANK=1
+CONFIG_OF_BOARD_FIXUP=y
 CONFIG_SYS_MEMTEST_START=0xc0000000
 CONFIG_SYS_MEMTEST_END=0xc4000000
 CONFIG_DISTRO_DEFAULTS=y
