--- a/configs/stm32mp25_defconfig
+++ b/configs/stm32mp25_defconfig
@@ -14,6 +14,7 @@ CONFIG_CMD_STM32PROG=y
 CONFIG_SYS_LOAD_ADDR=0x84000000
 CONFIG_ENV_ADDR=0x60900000
 CONFIG_FWU_NUM_IMAGES_PER_BANK=1
+CONFIG_OF_BOARD_FIXUP=y
 CONFIG_SYS_MEMTEST_START=0x84000000
 CONFIG_SYS_MEMTEST_END=0x88000000
 CONFIG_DISTRO_DEFAULTS=y
