--- a/arch/arm/dts/stm32mp251.dtsi
+++ b/arch/arm/dts/stm32mp251.dtsi
@@ -400,7 +400,7 @@
 			interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 172 IRQ_TYPE_LEVEL_HIGH>;
 			interrupt-names = "rx", "tx";
-			clocks = <&scmi_clk CK_BUS_IPCC1>;
+			clocks = <&scmi_clk CK_SCMI_IPCC1>;
 			status = "disabled";
 		};
 
@@ -2395,10 +2395,10 @@
 				st,syscfg = <&syscfg>;
 				#interrupt-cells = <1>;
 				interrupt-map-mask = <0 0 0 7>;
-				interrupt-map = <0 0 0 1 &intc 0 GIC_SPI 264 IRQ_TYPE_LEVEL_HIGH>,
-						<0 0 0 2 &intc 0 GIC_SPI 265 IRQ_TYPE_LEVEL_HIGH>,
-						<0 0 0 3 &intc 0 GIC_SPI 266 IRQ_TYPE_LEVEL_HIGH>,
-						<0 0 0 4 &intc 0 GIC_SPI 267 IRQ_TYPE_LEVEL_HIGH>;
+				interrupt-map = <0 0 0 1 &intc 0 0 GIC_SPI 264 IRQ_TYPE_LEVEL_HIGH>,
+						<0 0 0 2 &intc 0 0 GIC_SPI 265 IRQ_TYPE_LEVEL_HIGH>,
+						<0 0 0 3 &intc 0 0 GIC_SPI 266 IRQ_TYPE_LEVEL_HIGH>,
+						<0 0 0 4 &intc 0 0 GIC_SPI 267 IRQ_TYPE_LEVEL_HIGH>;
 				interrupts = <GIC_SPI 232 IRQ_TYPE_LEVEL_HIGH>,
 					     <GIC_SPI 238 IRQ_TYPE_LEVEL_HIGH>;
 				interrupt-names = "aer_msi", "pme_msi";
